remove native driectory

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -166,6 +166,8 @@ jobs:
 
       - name: Organize extensions
         run: |
+          rm -rf mygame/native
+          mkdir -p mygame/native
           cp -r artifacts/* mygame/native/*
 
       - name: Create release package
